LinKreta_POC_Repository/force-app/main/default/objects/AC_INVOICE_OUTSTANDING_DT__x/AC_INVOICE_OUTSTANDING_DT__x.object-meta.xml
<CustomObject>
    <description>AC_INVOICE_OUTSTANDING_DT</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>AC_INVOICE_OUTSTANDING_DT</externalName>
    <label>AC_INVOICE_OUTSTANDING_DT</label>
    <pluralLabel>AC_INVOICE_OUTSTANDING_DT</pluralLabel>
</CustomObject>