LinKreta_POC_Repository/force-app/main/default/objects/AC_INVOICE_OUTSTANDING_DT__x/fields/AGAINST_DOC_AID__c.field-meta.xml
<CustomField>
    <fullName>AGAINST_DOC_AID__c</fullName>
    <description>AGAINST_DOC_AID</description>
    <externalDeveloperName>AGAINST_DOC_AID</externalDeveloperName>
    <label>AGAINST_DOC_AID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>