LinKreta_POC_Repository/force-app/main/default/objects/AC_INVOICE_OUTSTANDING_DT__x/fields/AGAINST_DOC_MID__c.field-meta.xml
<CustomField>
    <fullName>AGAINST_DOC_MID__c</fullName>
    <description>AGAINST_DOC_MID</description>
    <externalDeveloperName>AGAINST_DOC_MID</externalDeveloperName>
    <label>AGAINST_DOC_MID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>