LinKreta_POC_Repository/force-app/main/default/objects/AC_INVOICE_OUTSTANDING_DT__x/fields/AGAINST_DOC_SR_NO__c.field-meta.xml
<CustomField>
    <fullName>AGAINST_DOC_SR_NO__c</fullName>
    <description>AGAINST_DOC_SR_NO</description>
    <externalDeveloperName>AGAINST_DOC_SR_NO</externalDeveloperName>
    <label>AGAINST_DOC_SR_NO</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>