LinKreta_POC_Repository/force-app/main/default/objects/AC_INVOICE_OUTSTANDING_DT__x/fields/BASE_FEE_ADJ_AMT__c.field-meta.xml
<CustomField>
    <fullName>BASE_FEE_ADJ_AMT__c</fullName>
    <description>BASE_FEE_ADJ_AMT</description>
    <externalDeveloperName>BASE_FEE_ADJ_AMT</externalDeveloperName>
    <label>BASE_FEE_ADJ_AMT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>