LinKreta_POC_Repository/force-app/main/default/objects/AC_INVOICE_OUTSTANDING_DT__x/fields/CURR_AID__c.field-meta.xml
<CustomField>
    <fullName>CURR_AID__c</fullName>
    <description>CURR_AID</description>
    <externalDeveloperName>CURR_AID</externalDeveloperName>
    <label>CURR_AID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>