LinKreta_POC_Repository/force-app/main/default/objects/AC_INVOICE_OUTSTANDING_DT__x/fields/DATE_CR__c.field-meta.xml
<CustomField>
    <fullName>DATE_CR__c</fullName>
    <description>DATE_CR</description>
    <externalDeveloperName>DATE_CR</externalDeveloperName>
    <label>DATE_CR</label>
    <type>DateTime</type>
</CustomField>