LinKreta_POC_Repository/force-app/main/default/objects/AC_INVOICE_OUTSTANDING_DT__x/fields/DOC_DATE__c.field-meta.xml
<CustomField>
    <fullName>DOC_DATE__c</fullName>
    <description>DOC_DATE</description>
    <externalDeveloperName>DOC_DATE</externalDeveloperName>
    <label>DOC_DATE</label>
    <type>DateTime</type>
</CustomField>