LinKreta_POC_Repository/force-app/main/default/objects/AC_INVOICE_OUTSTANDING_DT__x/fields/FORM_NAME__c.field-meta.xml
<CustomField>
    <fullName>FORM_NAME__c</fullName>
    <description>FORM_NAME</description>
    <externalDeveloperName>FORM_NAME</externalDeveloperName>
    <label>FORM_NAME</label>
    <length>8</length>
    <type>Text</type>
</CustomField>