LinKreta_POC_Repository/force-app/main/default/objects/AC_INVOICE_OUTSTANDING_DT__x/fields/TAX_AMT__c.field-meta.xml
<CustomField>
    <fullName>TAX_AMT__c</fullName>
    <description>TAX_AMT</description>
    <externalDeveloperName>TAX_AMT</externalDeveloperName>
    <label>TAX_AMT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>